<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity">

        <TextView
            android:id="@+id/view_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="48dp"
            android:text="@string/my_nanodegree_apps"/>

        <Button
            android:id="@+id/spotify_streamer_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/view_title"
            android:onClick="onSpotifyStreamerButtonClicked"
            android:text="@string/spotify_streamer"/>

        <Button
            android:id="@+id/scores_app_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/spotify_streamer_button"
            android:onClick="onScoresAppButtonClicked"
            android:text="@string/scores_app"/>

        <Button
            android:id="@+id/library_app_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/scores_app_button"
            android:onClick="onLibraryAppButtonClicked"
            android:text="@string/library_app"/>

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/library_app_button"
            android:onClick="onBuildItBiggerButtonClicked"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/ButtonStyle"
            android:layout_below="@+id/build_it_bigger_button"
            android:onClick="onXYZReaderButtonClicked"
            android:text="@string/xyz_reader"/>

        <Button
            android:id="@+id/capstone_my_own_app_button"
            style="@style/ButtonStyle.Red"
            android:layout_below="@+id/xyz_reader_button"
            android:onClick="onCapstoneMyOwnAppButtonClicked"
            android:text="@string/capstone_my_own_app"/>


    </RelativeLayout>
</ScrollView>
